--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,96 @@
-body{
-    background: #000;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+html {
+  font-size: 16px;
+}
+
+.banner-section {
+  max-width: 1128px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  min-height: 700px;
+  padding: 15px;
+}
+.details {
+  width: 50%;
+  height: 400px;
+  padding: 20px;
+}
+.details h1 {
+  font-size: 4rem;
+}
+.details p {
+  font-size: 1.4rem;
+  margin-bottom: 20px;
+}
+.btn {
+  padding: 12px 60px;
+  font-size: 1.3rem;
+  background: rgb(255, 89, 89);
+  border-radius: 10px;
+  border: none;
+  outline: none;
+  border-top-right-radius: 0;
+  margin-bottom: 150px;
+}
+.direction {
+  color: #000;
+  font-size: 1.4rem;
+}
+span {
+  color: rgb(255, 173, 90);
+}
+.image-site {
+  width: 50%;
+  height: 600px;
+}
+.image-site img {
+  width: 100%;
+  height: 100%;
+}
+
+.main {
+  max-width: 1128px;
+  margin: 0 auto;
+  height: 500px;
+  margin-top: 40px;
+  border: 2px solid red;
+}
+.title {
+  font-size: 2.5rem;
+  text-align: center;
+}
+.mission-cards {
+  display: flex;
+  gap: 50px;
+  padding: 10px;
+  margin-top: 20px;
+}
+.card {
+  width: 370px;
+  height: 300px;
+  border-radius: 10px;
+  border: 2px solid green;
+}
+
+@media screen and (max-width: 576px) {
+  .banner-section {
+    flex-direction: column-reverse;
+    padding: 0px;
+  }
+  .details {
+    width: 100%;
+  }
+  .image-site {
+    width: 100%;
+    margin-top: 70px;
+  }
+  .btn {
+    margin-bottom: 50px;
+  }
 }
