--- a/styles/style.css
+++ b/styles/style.css
@@ -90,6 +90,47 @@ span {
   margin-top: 20px;
 }
 
+.develop-section {
+  max-width: 1128px;
+  margin: 0 auto;
+  height: 500px;
+  display: flex;
+  gap: 20px;
+  padding: 20px;
+  margin-top: 80px;
+}
+.img-section {
+  width: 40%;
+  height: 100%;
+  border-radius: 10px;
+  position: relative;
+}
+.img-section img {
+  width: 100%;
+  height: 100%;
+}
+.shape-1 img {
+  width: 227px;
+  height: 227px;
+  position: absolute;
+  top: 100px;
+  left: -100px;
+  z-index: -1;
+}
+.detail-section {
+  width: 60%;
+  height: 100%;
+  padding: 20px;
+}
+.detail-section h1 {
+  font-size: 3rem;
+  margin-bottom: 20px;
+}
+.detail-section p {
+  font-size: 1.3rem;
+  margin-bottom: 20px;
+}
+
 @media screen and (max-width: 576px) {
   .banner-section {
     flex-direction: column-reverse;
@@ -114,5 +155,13 @@ span {
   .main {
     margin-top: 200px;
   }
- 
+  .develop-section {
+    flex-direction: column;
+  }
+  .detail-section {
+    width: 100%;
+  }
+  .img-section {
+    width: 100%;
+  }
 }
