--- a/styles/style.css
+++ b/styles/style.css
@@ -225,7 +225,11 @@ span {
   top: 600px;
   z-index: -1;
 }
-
+footer {
+  background-color: #000;
+  width: 100%;
+  height: 100px;
+}
 @media screen and (max-width: 576px) {
   .banner-section {
     flex-direction: column-reverse;
@@ -274,28 +278,28 @@ span {
     padding: 10px 50px;
     font-size: 1.1rem;
   }
-  .application-area{
+  .application-area {
     margin-top: 100px;
     flex-direction: column;
   }
-  .application-img{
+  .application-img {
     width: 100%;
     margin-top: 20px;
   }
-  .application-details{
+  .application-details {
     width: 100%;
   }
-  .title-2{
+  .title-2 {
     margin-top: 400px;
     font-size: 2rem;
   }
-  .shape-5 img{
+  .shape-5 img {
     left: 315px;
     top: 500px;
   }
-  .shape-3 img{
+  .shape-3 img {
     width: 110px;
-    height:110px;
+    height: 110px;
     top: 30px;
     left: 20px;
   }
