--- a/styles/style.css
+++ b/styles/style.css
@@ -57,7 +57,6 @@ span {
 .main {
   max-width: 1128px;
   margin: 0 auto;
-  height: 500px;
   margin-top: 40px;
 }
 .title {
@@ -228,7 +227,12 @@ span {
 footer {
   background-color: #000;
   width: 100%;
-  height: 100px;
+  padding: 50px;
+}
+footer h1{
+  text-align: center;
+  font-size: 3rem;
+  color: #fff;
 }
 @media screen and (max-width: 576px) {
   .banner-section {
